--- a/template/account/login_signup_template.html
+++ b/template/account/login_signup_template.html
@@ -305,7 +305,7 @@ section .container.active .signinBx .imgBx {
         <div class="formBx">
           <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
-            <h2>Sign In</h2>
+            <h2 class="text-success">Sign In</h2>
             <input type="text" name="username" required id="id_username" class="form-control" placeholder="Username">
             {{ form.username.errors }}
             <input type="password" name="password" required id="id_password" class="form-control" placeholder="Password">
@@ -314,7 +314,7 @@ section .container.active .signinBx .imgBx {
             <input type="submit" name="signup" value="Sign In" />
             <p class="signup">
               Don't have an account ?
-              <a href="#" onclick="toggleForm();">Sign Up.</a>
+              <a class="text-success" href="#" onclick="toggleForm();">Sign Up.</a>
             </p>
           </form>
         </div>
@@ -323,7 +323,7 @@ section .container.active .signinBx .imgBx {
         <div class="formBx">
           <form method="post" action="{% url 'signup' %}">
             {% csrf_token %}
-            <h2>Create an account</h2>
+            <h2 class="text-success">Create an account</h2>
         
             <input type="text" name="username" maxlength="150" required id="id_username" class="form-control" placeholder="Username">
             {{ form.username.errors }}
@@ -339,7 +339,7 @@ section .container.active .signinBx .imgBx {
         
             <p class="signup">
                 Already have an account ?
-                <a href="#" onclick="toggleForm();">Sign in.</a>
+                <a class="text-success" href="#" onclick="toggleForm();">Sign in.</a>
             </p>
         </form>
         
