--- a/template/base.html
+++ b/template/base.html
@@ -374,7 +374,7 @@
             .navbar-search {
                 border-top: white solid 1px;
                 border-bottom: white solid 1px;
-                width: 100%;
+                width: 90%;
                 padding-top: 1rem;
                 padding-bottom: 1rem;
             }
@@ -432,9 +432,10 @@
         position: absolute;
         z-index: 2;
         top: 50%;
-        left: -10%;
+        left: -20%;
         font-size: 2em;
         transform: translate(-50%,-50%);
+        color: white;
     }
     .cart-button .fa-box {
         position: absolute;
@@ -443,6 +444,7 @@
         left: 52%;
         font-size: 1.2em;
         transform: translate(-50%,-50%);
+        color: white;
     }
     .cart-button span {
         position: absolute;
@@ -451,6 +453,7 @@
         top: 50%;
         font-size: 1.2em;
         color: #fff;
+        width: 100%;
         transform: translate(-50%,-50%);
     }
     .cart-button span.add-to-cart {
@@ -474,13 +477,13 @@
     }
     @keyframes cart {
         0% {
-            left: -10%;
+            left: -20%;
         }
         40%, 60% {
             left: 50%;
         }
         100% {
-            left: 110%;
+            left: 120%;
         }
     }
     @keyframes box {
