--- a/template/store/product_list.html
+++ b/template/store/product_list.html
@@ -95,7 +95,7 @@ Products
                 <div class="category-box">
                     <a class="btn category-btn{% if not selected_category %} selected{% endif %}"
                         href="{% url 'product_list' %}">All</a></li>
-                        {% for category in categories|dictsort:"name" %}
+                        {% for category in categories|dictsort:"priority" %}
                     <a class="btn category-btn{% if category.name == selected_category %} selected{% endif %}"
                         href="?category={{ category.name }}">{{ category.name }}</a>
                         {% endfor %}
