--- a/template/base.html
+++ b/template/base.html
@@ -220,7 +220,11 @@
         .display-mobile {
             display: none;
         }
-
+        .product-body{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+        }
         .active-quantity {
             background-color: #198754;
             color: #fff;
