--- a/template/store/product_list.html
+++ b/template/store/product_list.html
@@ -137,7 +137,7 @@ Products
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-                        <div class="card-body">
+                        <div class="card-body product-body">
                             <h5 class="card-title">{{ product.name }}</h5>
                             <p class="card-text mobile-hidden">{{ product.short_description }}</p>
                             <span>Quantity:
